answers to more

--- a/mod1_foundations_of_applied_math/2_intro_to_numerical_methods.ipynb
+++ b/mod1_foundations_of_applied_math/2_intro_to_numerical_methods.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -82,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -127,10 +119,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A: YOUR ANSWER HERE blahaoishdoaisd"
+    "### A: Where f'(x) and f''(x) cross zero,  f(x) is changing directions. In particular, where f'(x) crosses zero, f(x) has local maxima and minima, and where f''(x) crosses zero, f(x) changes concavity."
    ]
   },
   {
@@ -158,7 +157,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A: YOUR ANSWER HERE: ushadfiuasdifu"
+    "### A: \n",
+    "$general: \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}$\n",
+    "\n",
+    "plugged in: $\\frac{-(2b) \\pm \\sqrt{(2b)^2 - 4(3a)(c)}}{2(3a)}\n",
+    "$\n",
+    "\n",
+    "$= \\frac{-2b \\pm \\sqrt{4b^2 - 12ac}}{6a}$\n",
+    "\n",
+    "$= \\frac{-b \\pm \\sqrt{b^2 - 3ac}}{3a}$"
    ]
   },
   {
@@ -172,7 +179,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A: YOUR ANSWER HERE"
+    "### A:\n",
+    " $general: x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}$\n",
+    "\n",
+    " $plugged in: x = \\frac{-(0) \\pm \\sqrt{(0)^2 - 4(3)(-6)}}{2(3)}$\n",
+    "\n",
+    " $= \\frac{\\pm \\sqrt{72}}{6}$\n",
+    "\n",
+    " $= \\pm \\sqrt{2}$ \n"
    ]
   },
   {
@@ -193,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -312,12 +326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The MAXIMUM value of f(x) occurs when x = -1.4142131805419922\n"
+     ]
+    }
+   ],
    "source": [
-    "# extrem1, extrem_iter1 = bisection_method( func, a, b )             \n",
-    "# print(\"The MAXIMUM value of f(x) occurs when x = {}\".format(extrem1))"
+    "extrem1, extrem_iter1 = bisection_method( df, -2, -1 )             \n",
+    "print(\"The MAXIMUM value of f(x) occurs when x = {}\".format(extrem1))"
    ]
   },
   {
@@ -336,12 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The MINIMUM value of f(x) occurs when x = 1.4142131805419922\n"
+     ]
+    }
+   ],
    "source": [
-    "# extrem2, extrem_iter2 = bisection_method( func, a, b )             \n",
-    "# print(\"The MINIMUM value of f(x) occurs when x = {}\".format(extrem2))"
+    "extrem2, extrem_iter2 = bisection_method( df, 1, 2 )             \n",
+    "print(\"The MINIMUM value of f(x) occurs when x = {}\".format(extrem2))"
    ]
   },
   {
@@ -392,8 +422,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A: YOUR ANSWER HERE"
+    "### A: \n",
+    "Absolute error:\n",
+    " $ e = |\\sqrt{2} - 1.4142131805419922|$\n",
+    "\n",
+    "$=3.8 * (10)^{-7}$\n",
+    "\n",
+    "Relative error:\n",
+    " $= \\frac{3.8 * (10)^{-7}}{|\\sqrt{2}|} $\n",
+    "\n",
+    "$= 2.7 * 10^{-7}$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -464,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
