--- a/mod1_foundations_of_applied_math/3_more_linear_algerbra.ipynb
+++ b/mod1_foundations_of_applied_math/3_more_linear_algerbra.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +86,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: [5. 2.]\n",
+      "Eigenvectors:\n",
+      " [[ 0.70710678 -0.4472136 ]\n",
+      " [ 0.70710678  0.89442719]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[4, 1],\n",
     "              [2, 3]])\n",
@@ -138,18 +149,47 @@
    "metadata": {},
    "source": [
     "## Answer 1\n",
-    "Eigenvalues = \n",
+    "B(v) = lambda(v)\n",
+    "(B-lambda*I)v = 0\n",
+    "det(B-lambda*I) = 0\n",
+    "B - lambda*I = [[3-lambda, 1],\n",
+    "                [0, 2-lambda]]\n",
+    "det(A-lambda*I) = (3-lambda)*(2-lambda)-(1*0) = 0\n",
+    "(3-lambda)(2-lambda) = 0\n",
+    "lambda = 3, lambda = 2\n",
+    "A - [3, 0[],[0, 3]] = [[0,1],\n",
+    "                        [0, -1]]\n",
+    "(A-2lambda)v = 0\n",
+    "v = \n",
+    "(3*2 - 1*0)\n",
+    "Eigenvalues = 3 and 2\n",
     "\n",
-    "Eigenvectors = "
+    "Eigenvectors = [1,0] and [-1, 1] \n",
+    "unit vector of [-1, 1] is [-0.70710678, 0.70710678]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eigenvalues: [3. 2.]\n",
+      "Eigenvectors: [[ 1.         -0.70710678]\n",
+      " [ 0.          0.70710678]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check your work:"
+    "# Check your work:\n",
+    "B = np.array(([3,1],\n",
+    "              [0,2]))\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(B)\n",
+    "print(\"Eigenvalues:\", eigenvalues)\n",
+    "print(\"Eigenvectors:\", eigenvectors)"
    ]
   },
   {
@@ -181,27 +221,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.70710678 -0.70710678]\n",
+      " [ 0.70710678  0.70710678]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# a: use NumPy to compute"
+    "# a: use NumPy to compute\n",
+    "C = np.array(([2,1],[1,2]))\n",
+    "eigenvalues, eigenvectors = np.linalg.eig(C)\n",
+    "print(eigenvectors)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b:"
+    "b: [0.70710678, 0.70710678] and [-0.70710678, 0.70710678]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3. 1.]\n",
+      "[[ 0.70710678 -0.70710678]\n",
+      " [ 0.70710678  0.70710678]]\n",
+      "First eigenvalue and vector:\n",
+      "[2.12132034 2.12132034]\n",
+      "[2.12132034 2.12132034]\n",
+      "Second:\n",
+      "[-0.70710678  0.70710678]\n",
+      "[-0.70710678  0.70710678]\n"
+     ]
+    }
+   ],
    "source": [
-    "# c: check that matrix * eigenvector = eigenvalue * eigenvector"
+    "# c: check that matrix * eigenvector = eigenvalue * eigenvector\n",
+    "print(eigenvalues)\n",
+    "print(eigenvectors)\n",
+    "\n",
+    "eigen1 = np.array([eigenvectors[0][0], eigenvectors[1][0]])\n",
+    "eigen2 = np.array([eigenvectors[0][1], eigenvectors[1][1]])\n",
+    "\n",
+    "print(\"First eigenvalue and vector:\")\n",
+    "print((np.dot(C, eigen1)))\n",
+    "print((np.dot(eigenvalues[0], eigen1)))\n",
+    "\n",
+    "print(\"Second:\")\n",
+    "print(np.dot(C, eigen2))\n",
+    "print(np.dot(eigenvalues[1], eigen2))\n",
+    "\n"
    ]
   },
   {
@@ -267,9 +349,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "P = np.array([1, 2])\n",
     "Q = np.array([4, 6])\n",
@@ -299,16 +389,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a. Find distance by hand:"
+    "a. Find distance by hand:\n",
+    "$ = \\sqrt{(3-6)^2 + (-1-2)^2}\n",
+    "= \\sqrt{(-3)^2 + (-3)^2}\n",
+    "= \\sqrt{18}\n",
+    "=3 * \\sqrt{2}\n",
+    "$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.242640687119285\n"
+     ]
+    }
+   ],
    "source": [
-    "# b. Check your work with numpy"
+    "# b. Check your work with numpy\n",
+    "A = np.array([2, 6])\n",
+    "B = np.array([-1, 3])\n",
+    "v = A - B\n",
+    "distance = np.linalg.norm(v)\n",
+    "print(distance)"
    ]
   },
   {
@@ -333,11 +441,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.295630140987\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate 3-D distance between C and D:"
+    "# Calculate 3-D distance between C and D:\n",
+    "C = np.array([3, 7, 2])\n",
+    "D = np.array([8, -2, 2])\n",
+    "v = C - D\n",
+    "distance = np.linalg.norm(v)\n",
+    "print(distance)"
    ]
   },
   {
@@ -488,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a. Find the least squares solution by hand"
+    "a. Find the least squares solution by hand\n"
    ]
   },
   {
@@ -497,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# b. using numpy"
+    "# b. using numpy\n"
    ]
   },
   {
@@ -532,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
