--- a/mod2_intermediate_python/2_class_inheritance.ipynb
+++ b/mod2_intermediate_python/2_class_inheritance.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,13 +366,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Create your Tuxedo class here\n",
-    "# class Tuxedo(Cat):\n",
-    "#     ...\n"
+    "\n",
+    "class Tuxedo(Cat):\n",
+    "    def __init__(self, name, age, personality='average', has_bow_tie=True):\n",
+    "        super().__init__(name, age)\n",
+    "        self.personality = personality\n",
+    "        self.has_bow_tie = has_bow_tie\n",
+    "    \n",
+    "    def show_off(self):\n",
+    "        return f\"{self.name} has a bow tie\"\n",
+    "    \n",
+    "    def interact(self):\n",
+    "        return f\"{self.name} is {self.personality}\"\n",
+    "\n",
+    "    def meow(self):\n",
+    "        return f\"{self.name} says: Meow Meow!!!\"\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -390,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,18 +423,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Generic Cat ===\n",
+      "Whiskers says: Meow!\n",
+      "Whiskers is 4 years old\n",
+      "\n",
+      "=== Tuxedo Cat ===\n",
+      "Mr. Mittens says: Meow Meow!!!\n",
+      "Mr. Mittens is 7 years old\n",
+      "Mr. Mittens has a bow tie\n",
+      "Mr. Mittens is sassy\n"
+     ]
+    }
+   ],
    "source": [
     "# Create instances\n",
     "whiskers = Cat(\"Whiskers\", 4)\n",
-    "# mr_mittens = Tuxedo( ??? )\n",
+    "mr_mittens = Tuxedo(\"Mr. Mittens\", 7, personality='sassy')\n",
     "\n",
     "print(\"=== Generic Cat ===\")\n",
+    "print(whiskers.meow())\n",
+    "print(whiskers.get_info())\n",
     "# call your methods here!\n",
     "\n",
     "print(\"\\n=== Tuxedo Cat ===\")\n",
+    "print(mr_mittens.meow())\n",
+    "print(mr_mittens.get_info())\n",
+    "print(mr_mittens.show_off())\n",
+    "print(mr_mittens.interact())\n",
     "# call your methods here!\n",
     "\n"
    ]
@@ -450,9 +488,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buddy is a GoldenRetriever: True\n",
+      "buddy is a Dog: True\n",
+      "buddy is a Cat: False\n",
+      "\n",
+      "generic_dog is a Dog: True\n",
+      "generic_dog is a GoldenRetriever: False\n"
+     ]
+    }
+   ],
    "source": [
     "# Using isinstance() to check object types\n",
     "print(\"buddy is a GoldenRetriever:\", isinstance(buddy, GoldenRetriever))\n",
@@ -553,7 +604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cps",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -567,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
