--- a/mod2_intermediate_python/3_algorithm_puzzles.ipynb
+++ b/mod2_intermediate_python/3_algorithm_puzzles.ipynb
@@ -31,13 +31,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pp\n",
+      "pip\n",
+      "555\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your function here!\n",
     "def longest_palindrome(string) -> str:\n",
-    "    pass"
+    "    stringLst = list(string)\n",
+    "    palindrome = []\n",
+    "    longestPalindrome = []\n",
+    "    for i in range(0, len(stringLst)):\n",
+    "        for j in range(0, len(stringLst)):\n",
+    "            if stringLst[i:j] == stringLst[j-1:i-1:-1]:\n",
+    "                palindrome = stringLst[i:j]\n",
+    "                #print(palindrome)#for checking\n",
+    "                if len(palindrome) > len(longestPalindrome):\n",
+    "                    longestPalindrome = palindrome\n",
+    "                    #print(longestPalindrome) #for checking\n",
+    "    longestPalindrome = ''.join(longestPalindrome)\n",
+    "\n",
+    "\n",
+    "    return longestPalindrome\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "print(longest_palindrome('apple')) # returns 'pp'\n",
+    "print(longest_palindrome('epiphany')) # returns 'pip'\n",
+    "print(longest_palindrome('12345556778')) #returns '555'\n",
+    "    \n"
    ]
   },
   {
@@ -141,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
