--- a/mod3_math_modeling/2_intro_to_comp_stats.ipynb
+++ b/mod3_math_modeling/2_intro_to_comp_stats.ipynb
@@ -153,7 +153,8 @@
    "source": [
     "### A: \n",
     "For uniform: y values decrease and the shape of the distribution flattens out.\n",
-    "For Gaussian, the y values also decrease, and the graph develops a distinct shape, the classic bell curve.\n"
+    "For Gaussian, the y values also decrease, and the graph develops a distinct shape, the classic bell curve.\n",
+    "For binomial, the y values even out, approaching 0.5.  \n"
    ]
   },
   {
@@ -242,9 +243,9 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "a. Staying with your initial choice?\n",
+    "a. Staying with your initial choice? 1/3\n",
     "\n",
-    "b. Switching your choice?"
+    "b. Switching your choice? 2/3 "
    ]
   },
   {
@@ -261,7 +262,7 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "YOUR ANSWER HERE: The chance of winning does not depend on the intital choice because regardless of the initial choice, staying will always have a win probability of 0.33 and switching will be 0.66. "
    ]
   },
   {
