--- a/mod2_intermediate_python/3_algorithm_puzzles.ipynb
+++ b/mod2_intermediate_python/3_algorithm_puzzles.ipynb
@@ -96,13 +96,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "6\n",
+      "12\n",
+      "29\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your funciton here!\n",
     "def rom_to_int(string) -> int:\n",
-    "    pass"
+    "    romLst = list(string)\n",
+    "    sum = 0\n",
+    "    for ind in range(0, len(romLst)):\n",
+    "        if romLst[ind] == 'V':\n",
+    "            sum += 5\n",
+    "        elif romLst[ind] == 'X':\n",
+    "            sum += 10\n",
+    "        if romLst[ind] == 'I':\n",
+    "            if ind == len(romLst)-1:\n",
+    "                sum += 1\n",
+    "            elif romLst[ind+1] != 'I':\n",
+    "                sum -= 1\n",
+    "            else:\n",
+    "                sum += 1\n",
+    "    return sum\n",
+    "print(rom_to_int('IV'))\n",
+    "print(rom_to_int('VI'))\n",
+    "print(rom_to_int('XII'))\n",
+    "print(rom_to_int('XXIX'))"
    ]
   },
   {
@@ -140,13 +169,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1]\n",
+      "[1, 2, 1]\n",
+      "[1, 3, 3, 1]\n",
+      "[1, 4, 6, 4, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write you function here!\n",
     "def pasc_generation(columns) -> list:\n",
-    "    pass"
+    "    start = [1]\n",
+    "\n",
+    "    if columns == 0:\n",
+    "        return start\n",
+    "    \n",
+    "    else:\n",
+    "        for row in range(0, int(columns)):\n",
+    "            newSeq = [1,1]\n",
+    "            for i in range (0, len(start)-1):\n",
+    "                newSeq.insert(i+1, start[i]+start[i+1])\n",
+    "            start = newSeq\n",
+    "            print(start)\n",
+    "        \n",
+    "pasc_generation(4) #returns [[1],[1,1]]\n"
    ]
   },
   {
@@ -159,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -173,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
