--- a/mod2_intermediate_python/3_algorithm_puzzles.ipynb
+++ b/mod2_intermediate_python/3_algorithm_puzzles.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
     "            start = newSeq\n",
     "            print(start)\n",
     "        \n",
-    "pasc_generation(4) #returns [[1],[1,1]]\n"
+    "pasc_generation(4) \n"
    ]
   },
   {
