--- a/mod3_math_modeling/3_intro_to_data_analysis_corrected.ipynb
+++ b/mod3_math_modeling/3_intro_to_data_analysis_corrected.ipynb
@@ -669,7 +669,7 @@
    "id": "94dab4d3",
    "metadata": {},
    "source": [
-    "Although the two plots would "
+    "Although the two plots would suggest that food inflation in Chile and Peru are tightly linked since visually, their historgrams look quite similar, further analysis using p-testing shows that the difference between the two countries is significant, suggesting that despite both countries being located in South America, the food-security/affordability status of different countries on the same country don't have to be similar. So, there must be other factors at play beyond potentially similar geopolitical circumstances/climates. This analysis would benefit from more variables, such as climate statistics, economic indicators, etc."
    ]
   },
   {
