--- a/mod4_intro_to_ML/2_preprocessing.ipynb
+++ b/mod4_intro_to_ML/2_preprocessing.ipynb
@@ -54,7 +54,7 @@
       "metadata": {},
       "source": [
         "### A: \n",
-        "YOUR ANSWER HERE"
+        "The model would give more weight to the larger numbers even if this numbers have little to no impact on the actual thing you're predicting."
       ]
     },
     {
@@ -101,7 +101,7 @@
       "metadata": {},
       "source": [
         "### A: \n",
-        "YOUR ANSWER HERE"
+        "Not all data is normally distributed, and in fact, most of the times, it isn't."
       ]
     },
     {
@@ -146,7 +146,7 @@
       "metadata": {},
       "source": [
         "### A: \n",
-        "YOUR ANSWER HERE"
+        "With many possible categories, the memory storing each column would increase and increase, slowing the program down and decreasing efficiency. If for example you wanted to store 200+ country names. You'd need to have 200+ columns, even though each column will only be true/1 for one entry. It would become difficult to sort through."
       ]
     },
     {
@@ -212,7 +212,9 @@
       "metadata": {},
       "source": [
         "### A: \n",
-        "YOUR ANSWER HERE"
+        "Encoding might be most important if you want to make sense of which product categories are more popular. Without this step, you're ignoring a component of your data.\n",
+        "Scaling is also important, since weekly sales are going to be much larger than price for one unit. \n",
+        "PCA will be important in determining whether price, category, or supplier rating work in tandem or not, however, since it's only 3 variables, you could probably instead make three individual comparisons instead."
       ]
     },
     {
