--- a/mod4_intro_to_ML/3_model_performance.ipynb
+++ b/mod4_intro_to_ML/3_model_performance.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "source": [
     "### A:\n",
-    "YOUR ANSWER HERE"
+    "A program trained to make as accurate predictions as possible when faced with new scenarios after having been trained on similar scenarios beforehand."
    ]
   },
   {
@@ -162,7 +162,7 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "With an 80/20 split, more data is available to train your model, so it may attain a more accurate understanding of the patterns. However, only 20% is left to train on, so you can be less confident in the accuracy/performance of the model. Meanwhile with 50/50, less data is available to train on, so the model will likely jave a less detailed understanding of the patterns, but if it performs well in testing, you can be more confident since there were mroe examples to test on. 80/20 might lead to overfitting while 50/50 might lead to underfitting."
    ]
   },
   {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "cf0d7091",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "No! Since cancer is very rare anyway, even if the computer guesses nobody has cancer, it would still have a very high accuracy. Meanwhile, people could lack the diagnoses they need to get treatment in time. "
    ]
   },
   {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "63d0f3b6",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "be8f0b47",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "If recall was one, this would be very good, as it would suggest that the model caught ALL cases of cancer. Essentially, no false negatives. This is arguably most important. If precision was 1, this would also be very good, as it would mean there were no false positives. "
    ]
   },
   {
@@ -362,7 +362,7 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "If you increase precision, you are minimising false positives, meaning you need to minimise the number of positive predictions. This could cause the model to prioritise minimising false positives, potentially causing it to have more false negatives for fear of being incorrect. Essentially it's a trade-off."
    ]
   },
   {
@@ -428,12 +428,12 @@
    "metadata": {},
    "source": [
     "### A: \n",
-    "YOUR ANSWER HERE"
+    "If your data is imbalanced, the model could perform well on a test set simply because there is a lot of for example orange (using the example above) in the test set. However, the model isn't actually sensitive. Maybe you could perform preprocessing to avoid imbalance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "88e9151b",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
    "source": [
     "### A:\n",
     "\n",
-    "YOUR ANSWER HERE"
+    "I think it's that you scored the performance using accuracy instead of precision/recall/f1 scores, so using this accuracy metric could be misleading as it doesn't tell you enough about the true/false negs/pos. "
    ]
   },
   {
@@ -501,7 +501,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
