--- a/mod7_deep_learning/3_more_recurrent_neural_nets.ipynb
+++ b/mod7_deep_learning/3_more_recurrent_neural_nets.ipynb
@@ -10,16 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "ac000c5d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pytorch version: 2.3.1.post100\n",
-      "Torchtext version: 0.6.0\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Field' from 'torchtext.data' (/opt/conda/envs/py311/lib/python3.11/site-packages/torchtext/data/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnn\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorchtext\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorchtext\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Field, LabelField, BucketIterator\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorchtext\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SST\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtqdm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m tqdm\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'Field' from 'torchtext.data' (/opt/conda/envs/py311/lib/python3.11/site-packages/torchtext/data/__init__.py)"
      ]
     }
    ],
@@ -32,6 +35,7 @@
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "torch.manual_seed(12)\n",
+    "\n",
     "\n",
     "print(f\"Pytorch version: {torch.__version__}\")\n",
     "print(f\"Torchtext version: {torchtext.__version__}\")"
@@ -50,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "11f676d1",
    "metadata": {},
    "outputs": [
@@ -76,10 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "0d7a9cb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Field' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Define field types\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m TEXT = \u001b[43mField\u001b[49m(tokenize=\u001b[33m'\u001b[39m\u001b[33mbasic_english\u001b[39m\u001b[33m'\u001b[39m, lower=\u001b[38;5;28;01mTrue\u001b[39;00m, include_lengths=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m      3\u001b[39m LABEL = LabelField(dtype=torch.float)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# Load SST data\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'Field' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Define field types\n",
     "TEXT = Field(tokenize='basic_english', lower=True, include_lengths=True)\n",
@@ -93,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b28371e0",
    "metadata": {},
    "outputs": [
@@ -126,10 +142,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a0cf005c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'TEXT' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Build vocabulary\u001b[39;00m\n\u001b[32m      2\u001b[39m MAX_VOCAB_SIZE = \u001b[32m10000\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mTEXT\u001b[49m.build_vocab(train_data, max_size=MAX_VOCAB_SIZE)\n\u001b[32m      4\u001b[39m LABEL.build_vocab(train_data)\n\u001b[32m      6\u001b[39m vocab = TEXT.vocab.stoi\n",
+      "\u001b[31mNameError\u001b[39m: name 'TEXT' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Build vocabulary\n",
     "MAX_VOCAB_SIZE = 10000\n",
@@ -146,7 +174,8 @@
    "metadata": {},
    "source": [
     "### Q: What variable type is `vocab`? What does the `.build_vocab` method do?\n",
-    "Hint: `.stoi` stand for \"string to int\"!"
+    "Hint: `.stoi` stand for \"string to int\"!\n",
+    "Vocab is an integer. "
    ]
   },
   {
@@ -160,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "808947d2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "db2b9311",
    "metadata": {},
    "outputs": [
@@ -228,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9f9b79f6",
    "metadata": {},
    "outputs": [],
@@ -288,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4d0f5ae1",
    "metadata": {},
    "outputs": [],
@@ -356,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "ecb8f7c0",
    "metadata": {},
    "outputs": [],
@@ -391,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "1394f8b5",
    "metadata": {},
    "outputs": [
@@ -636,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "a9d49990",
    "metadata": {},
    "outputs": [
@@ -758,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "1a500b17",
    "metadata": {},
    "outputs": [
@@ -840,7 +869,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -854,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
