--- a/mod7_deep_learning/2_more_convolutional_neural_nets.ipynb
+++ b/mod7_deep_learning/2_more_convolutional_neural_nets.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f0828170",
    "metadata": {},
    "outputs": [
@@ -619,6 +619,30 @@
      "output_type": "stream",
      "text": [
       "100%|██████████| 500/500 [01:54<00:00,  4.36it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9 - Train Loss: 2.4332, Train Acc: 11.85%, Test Acc: 11.86%\n",
+      "\n",
+      "Epoch 10/10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 500/500 [01:49<00:00,  4.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10 - Train Loss: 2.4334, Train Acc: 11.86%, Test Acc: 11.70%\n",
+      "\n"
      ]
     }
    ],
