--- a/mod8_final_project/clustering_music_genres.ipynb
+++ b/mod8_final_project/clustering_music_genres.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -188,6 +188,9 @@
      "output_type": "stream",
      "text": [
       "✓ Data scaled\n",
+      "\n",
+      "Original data shape: (100, 6)\n",
+      "Scaled data shape: (100, 6)\n",
       "\n"
      ]
     }
@@ -196,10 +199,11 @@
     "features = ['danceability', 'energy', 'acousticness', 'speechiness', 'tempo', 'loudness']\n",
     "\n",
     "# TODO: Extract features and scale them\n",
-    "X = None\n",
+    "X = songs[features].values\n",
     "\n",
-    "scaler = None\n",
-    "X_scaled = None\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
     "\n",
     "print(\"✓ Data scaled\\n\")\n",
     "print(f\"Original data shape: {X.shape}\")\n",
@@ -259,14 +263,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Test k from 2 to 8 and calculate inertia + silhouette score"
+    "# TODO: Test k from 2 to 8 and calculate inertia + silhouette score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list.append() takes exactly one argument (0 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     12\u001b[39m kmeans_temp.fit( X_scaled )\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# 3. Append inertia and silhouette_score\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m \u001b[43minertias\u001b[49m\u001b[43m.\u001b[49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m sil_score = \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m     16\u001b[39m silhouettes.append(sil_score)\n",
+      "\u001b[31mTypeError\u001b[39m: list.append() takes exactly one argument (0 given)"
+     ]
+    }
+   ],
    "source": [
     "K_range = range(2, 9)\n",
     "inertias = []\n",
@@ -276,10 +292,10 @@
     "    # Your code here:\n",
     "\n",
     "    # 1. Create KMeans with n_clusters=k, random_state=42\n",
-    "    kmeans_temp = None\n",
+    "    kmeans_temp = KMeans( n_clusters= k , random_state=42 )\n",
     "\n",
     "    # 2. Fit to X_scaled\n",
-    "\n",
+    "    kmeans_temp.fit( X_scaled )\n",
     "    # 3. Append inertia and silhouette_score\n",
     "    inertias.append()\n",
     "    sil_score = None\n",
@@ -578,7 +594,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -592,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
