--- a/mod8_final_project/doodle_detective_cnn.ipynb
+++ b/mod8_final_project/doodle_detective_cnn.ipynb
@@ -885,7 +885,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -899,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
