--- a/mod8_final_project/naughty_or_nice_regression.ipynb
+++ b/mod8_final_project/naughty_or_nice_regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "701e2b97",
    "metadata": {},
    "outputs": [],
@@ -675,7 +675,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "torchenv",
    "language": "python",
    "name": "python3"
   },
